# TODO

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: core.h  types.h  utils.h
src/: CMakeLists.txt  core.cpp  main.cpp  utils.cpp
